<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="invisible"
    tools:visibility="visible">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:letterSpacing="0.2"
        android:text="@string/difficulty"
        android:textColor="@color/lightSnow"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/vDivOne"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:contentDescription="@string/descrTitle"
        android:id="@+id/ivTitle"
        android:layout_width="210dp"
        android:layout_height="100dp"
        android:src="@drawable/title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.079" />

    <ImageView
        android:contentDescription="@string/descrMode"
        android:id="@+id/ivMode"
        android:layout_width="90dp"
        android:layout_height="35dp"
        android:src="@drawable/mode_3"
        app:layout_constraintBottom_toTopOf="@+id/lyButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivTitle"
        app:layout_constraintVertical_bias="0.46" />

    <ImageView
        android:contentDescription="@string/descrModeNext"
        android:id="@+id/btnModeNext"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:alpha="0.37"
        android:background="@android:color/transparent"
        android:padding="2dp"
        android:src="@drawable/plus"
        app:layout_constraintBottom_toBottomOf="@+id/ivMode"
        app:layout_constraintStart_toEndOf="@+id/ivMode"
        app:layout_constraintTop_toTopOf="@+id/ivMode" />

    <ImageView
        android:contentDescription="@string/descrModePrevious"
        android:id="@+id/btnModePrevious"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:alpha="0.37"
        android:background="@android:color/transparent"
        android:padding="2dp"
        android:src="@drawable/minus"
        app:layout_constraintBottom_toBottomOf="@+id/ivMode"
        app:layout_constraintEnd_toStartOf="@+id/ivMode"
        app:layout_constraintTop_toTopOf="@+id/ivMode" />

    <View
        android:id="@+id/vDivOne"
        android:layout_width="190dp"
        android:layout_height="1dp"
        android:layout_marginBottom="14dp"
        android:background="@color/lightSnow"
        app:layout_constraintBottom_toTopOf="@+id/ivMode"
        app:layout_constraintEnd_toEndOf="@+id/btnModeNext"
        app:layout_constraintStart_toStartOf="@+id/btnModePrevious" />

    <View
        android:id="@+id/vDivTwo"
        android:layout_width="190dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/lightSnow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivMode" />

    <LinearLayout
        android:id="@+id/lyButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.69">

        <ImageView
            android:contentDescription="@string/descrPlay"
            android:id="@+id/btnPlay"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:src="@drawable/btn_play" />

        <ImageView
            android:contentDescription="@string/descrResume"
            android:id="@+id/btnResume"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/btn_resume" />

        <ImageView
            android:contentDescription="@string/descrRate"
            android:id="@+id/btnRate"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/btn_rate" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>