<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="invisible"
    tools:visibility="visible">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lyContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/dialog_background"
        android:paddingBottom="22dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="22dp"
            android:letterSpacing="0.07"
            android:text="@string/pause"
            android:textColor="@color/snow"
            android:textSize="23sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:contentDescription="@string/descrRestart"
            android:id="@+id/btnRestart"
            android:layout_width="0dp"
            android:layout_height="63dp"
            android:layout_marginTop="22dp"
            android:src="@drawable/btn_restart_lv1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <ImageView
            android:contentDescription="@string/descrHome"
            android:id="@+id/btnHome"
            android:layout_width="0dp"
            android:layout_height="63dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/btn_home_lv2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnRestart" />

        <ImageView
            android:contentDescription="@string/descrClose"
            android:id="@+id/btnClose"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:padding="10dp"
            android:src="@drawable/ic_close"
            android:tint="@color/lightSnow"
            android:tintMode="src_in"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>