<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="invisible"
    tools:visibility="visible">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lyContainer"
        android:layout_width="match_parent"
        android:layout_height="227.1dp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <ImageView
            android:id="@+id/ivBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/descrBackground"
            android:src="@drawable/dialog_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/tvMoveOn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal"
            android:includeFontPadding="false"
            android:letterSpacing="0.02"
            android:lineSpacingExtra="5sp"
            android:shadowColor="#3d000000"
            android:shadowDy="3"
            android:shadowRadius="25"
            android:text="@string/goOn"
            android:textColor="#ffffff"
            android:textSize="23.3sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivGetBacks"
            android:layout_width="308.2dp"
            android:layout_height="73.7dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/descrBackground"
            android:src="@drawable/dialog_btn_primary_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvMoveOn" />

        <ImageView
            android:id="@+id/ivGiveUp"
            android:layout_width="308.2dp"
            android:layout_height="73.7dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/descrBackground"
            android:src="@drawable/dialog_btn_secondary_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivGetBacks" />

        <TextView
            android:id="@+id/tvBacksText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:lineSpacingExtra="4.7sp"
            android:shadowColor="#3d000000"
            android:shadowDy="3"
            android:shadowRadius="25"
            android:text="@string/getBacks"
            android:textColor="#ffffff"
            android:textSize="23sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/ivGetBacks"
            app:layout_constraintEnd_toEndOf="@+id/ivGetBacks"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="@+id/ivGetBacks"
            app:layout_constraintTop_toTopOf="@+id/ivGetBacks"
            app:layout_constraintVertical_bias="0.44" />


        <ImageView
            android:id="@+id/ivVideo"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="1dp"
            android:contentDescription="@string/descrIcon"
            android:src="@drawable/video"
            android:tint="@color/snow"
            app:layout_constraintBottom_toBottomOf="@+id/tvBacksText"
            app:layout_constraintStart_toEndOf="@+id/tvBacksText"
            app:layout_constraintTop_toTopOf="@+id/tvBacksText" />

        <TextView
            android:id="@+id/tvGiveUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:includeFontPadding="false"
            android:lineSpacingExtra="4.7sp"
            android:shadowColor="#3d000000"
            android:shadowDy="3"
            android:shadowRadius="25"
            android:text="@string/giveUp"
            android:textColor="#4dffffff"
            android:textSize="23sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="@+id/ivGiveUp"
            app:layout_constraintEnd_toEndOf="@+id/ivGiveUp"
            app:layout_constraintStart_toStartOf="@+id/ivGiveUp"
            app:layout_constraintTop_toTopOf="@+id/ivGiveUp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>