<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="invisible"
    tools:visibility="visible">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lyContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:background="@drawable/dialog_background"
        android:paddingBottom="22dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="22dp"
            android:letterSpacing="0.07"
            android:text="@string/undo_last_move"
            android:textColor="@color/snow"
            android:textSize="23sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:contentDescription="@string/undo_last_move"
            android:id="@+id/btnUndo"
            android:layout_width="0dp"
            android:layout_height="63dp"
            android:layout_marginTop="22dp"
            android:src="@drawable/btn_undo_move_lv1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <ImageView
            android:contentDescription="@string/descrGetBacks"
            android:id="@+id/btnGetBacks"
            android:layout_width="0dp"
            android:layout_height="63dp"
            android:layout_marginTop="22dp"
            android:src="@drawable/btn_get_backs_lv1"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <ImageView
            android:contentDescription="@string/descrGiveUp"
            android:id="@+id/btnGiveUp"
            android:layout_width="0dp"
            android:layout_height="63dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/btn_give_up_lv2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnUndo" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>