<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="invisible"
    tools:visibility="visible">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lyContainer"
        android:layout_width="match_parent"
        android:layout_height="457.1dp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <ImageView
            android:id="@+id/ivBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.2"
            android:contentDescription="@string/descrBackground"
            android:src="@drawable/dialog_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/tvGoal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal"
            android:includeFontPadding="false"
            android:letterSpacing="0.02"
            android:lineSpacingExtra="5sp"
            android:shadowColor="#3d000000"
            android:shadowDy="3"
            android:shadowRadius="25"
            android:text="@string/yourGoal"
            android:textColor="#ffffff"
            android:textSize="23.3sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivGoalTextBg"
            android:layout_width="324.2dp"
            android:layout_height="279.4dp"
            android:layout_marginTop="17.6dp"
            android:contentDescription="@string/descrBackground"
            android:src="@drawable/goal_text_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvGoal" />

        <ImageView
            android:id="@+id/ivGotIt"
            android:layout_width="308.2dp"
            android:layout_height="73.7dp"
            android:contentDescription="@string/descrBackground"
            android:src="@drawable/dialog_btn_primary_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivGoalTextBg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:lineSpacingExtra="4.7sp"
            android:shadowColor="#3d000000"
            android:shadowDy="3"
            android:shadowRadius="25"
            android:text="@string/gotIt"
            android:textColor="#ffffff"
            android:textSize="23sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/ivGotIt"
            app:layout_constraintEnd_toEndOf="@+id/ivGotIt"
            app:layout_constraintStart_toStartOf="@+id/ivGotIt"
            app:layout_constraintTop_toTopOf="@+id/ivGotIt"
            app:layout_constraintVertical_bias="0.44" />

        <TextView
            android:layout_width="293.3dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="17.8dp"
            android:layout_marginTop="11.3dp"
            android:fontFamily="sans-serif-light"
            android:lineSpacingExtra="0.9sp"
            android:text="@string/goalText"
            android:textColor="#80808B"
            android:textSize="15.7sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="@+id/ivGoalTextBg"
            app:layout_constraintTop_toTopOf="@+id/ivGoalTextBg" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>